--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
-    "vuex": "^3.6.2"
+    "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
+    "localforage": "^1.10.0",
+    "vue-axios-cors": "^1.0.1",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~5.0.0",
