--- a/frontend/vinylvault/package.json
+++ b/frontend/vinylvault/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.6",
+    "cors": "^2.8.5",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
