--- a/backend/composer.json
+++ b/backend/composer.json
@@ -5,6 +5,8 @@
         }
     },
     "require": {
-        "vlucas/phpdotenv": "^5.3"
+        "vlucas/phpdotenv": "^5.3",
+        "zircote/swagger-php": "^4.6",
+        "doctrine/annotations": "^2.0"
     }
 }
