--- a/frontend/vinylvault/package.json
+++ b/frontend/vinylvault/package.json
@@ -9,16 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "@vue/compat": "^3.2.45",
     "axios": "^1.2.6",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
     "cors": "^2.8.5",
-    "vue": "^3.2.45",
+    "jquery": "^3.6.3",
+    "vue": "^3.1.0",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
+    "@types/jquery": "^3.5.16",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-plugin-vuex": "^5.0.8",
+    "@vue/compiler-sfc": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.11"
