--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,15 @@
     "cors": "^2.8.5",
     "localforage": "^1.10.0",
     "vue-axios-cors": "^1.0.1",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "@vitejs/plugin-vue": "^3.1.2",
+    "@vue/compat": "^3.2.41",
+    "bootstrap-vue": "npm:@ankurk91/bootstrap-vue@^3.0.2",
+    "vue": "^3.2.41"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0"
+    "@vue/cli-plugin-vuex": "~5.0.0",
+    "vite": "^3.1.8"
   }
 }
